# pxscroller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
res/: iso.png~
src/: anim_comp.cpp  anim_comp.hpp  chunk.hpp  comp.hpp  entity.cpp  entity.hpp  game_engine.cpp  game_engine.hpp  isometric.hpp  main.cpp  region_loader.hpp  state_manager.hpp  states.hpp
